--- a/src/components/QuotesPanel/QuotesPanel.module.css
+++ b/src/components/QuotesPanel/QuotesPanel.module.css
@@ -36,3 +36,23 @@
 
   font-weight: bold;
 }
+
+@media (max-width: 800px) {
+  .quoteBox {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    gap: 20px;
+    padding: 15px;
+    width: 300px;
+    height: 200px;
+  }
+
+  .quoteAuthorImage {
+    width: 50px;
+    height: 50px;
+  }
+  .quoteTextBox {
+    flex-direction: column;
+  }
+}
