--- a/src/components/QuotesInteraction/QuotesInteraction.module.css
+++ b/src/components/QuotesInteraction/QuotesInteraction.module.css
@@ -18,7 +18,10 @@
 
   /* background-color: green; */
 }
-
+.text {
+  margin-left: 5px;
+  margin-right: 5px;
+}
 @media (max-width: 800px) {
   .BtnsBox {
     flex-direction: column;
